--- a/section_1/datetime.ipynb
+++ b/section_1/datetime.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://ndownloader.figshare.com/files/12948515\n"
+     ]
+    }
+   ],
    "source": [
     "# Download csv of temp (F) and precip (inches) in July 2018 for Boulder, CO\n",
     "file_url = \"https://ndownloader.figshare.com/files/12948515\"\n",
@@ -41,11 +49,291 @@
     "# Import file into pandas dataframe\n",
     "boulder_july_2018 = pd.read_csv(file_path)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>max_temp</th>\n",
+       "      <th>precip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-07-01</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-07-02</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-07-03</td>\n",
+       "      <td>90</td>\n",
+       "      <td>-999.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-07-04</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-07-05</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2018-07-06</td>\n",
+       "      <td>87</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2018-07-07</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2018-07-08</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2018-07-09</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2018-07-10</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2018-07-11</td>\n",
+       "      <td>95</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2018-07-12</td>\n",
+       "      <td>92</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2018-07-13</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2018-07-14</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2018-07-15</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2018-07-16</td>\n",
+       "      <td>85</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2018-07-17</td>\n",
+       "      <td>84</td>\n",
+       "      <td>-999.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2018-07-18</td>\n",
+       "      <td>94</td>\n",
+       "      <td>-999.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2018-07-19</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2018-07-20</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2018-07-21</td>\n",
+       "      <td>93</td>\n",
+       "      <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2018-07-22</td>\n",
+       "      <td>94</td>\n",
+       "      <td>0.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2018-07-23</td>\n",
+       "      <td>78</td>\n",
+       "      <td>0.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2018-07-24</td>\n",
+       "      <td>86</td>\n",
+       "      <td>0.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2018-07-25</td>\n",
+       "      <td>82</td>\n",
+       "      <td>0.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2018-07-26</td>\n",
+       "      <td>81</td>\n",
+       "      <td>0.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2018-07-27</td>\n",
+       "      <td>80</td>\n",
+       "      <td>0.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2018-07-28</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2018-07-29</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2018-07-30</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2018-07-31</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date  max_temp  precip\n",
+       "0   2018-07-01        87    0.00\n",
+       "1   2018-07-02        92    0.00\n",
+       "2   2018-07-03        90 -999.00\n",
+       "3   2018-07-04        87    0.00\n",
+       "4   2018-07-05        84    0.24\n",
+       "5   2018-07-06        87    0.00\n",
+       "6   2018-07-07        96    0.00\n",
+       "7   2018-07-08        96    0.00\n",
+       "8   2018-07-09        93    0.00\n",
+       "9   2018-07-10        97    0.00\n",
+       "10  2018-07-11        95    0.00\n",
+       "11  2018-07-12        92    0.05\n",
+       "12  2018-07-13        88    0.00\n",
+       "13  2018-07-14        94    0.00\n",
+       "14  2018-07-15        93    0.45\n",
+       "15  2018-07-16        85    0.02\n",
+       "16  2018-07-17        84 -999.00\n",
+       "17  2018-07-18        94 -999.00\n",
+       "18  2018-07-19        97    0.00\n",
+       "19  2018-07-20        94    0.00\n",
+       "20  2018-07-21        93    0.05\n",
+       "21  2018-07-22        94    0.11\n",
+       "22  2018-07-23        78    0.31\n",
+       "23  2018-07-24        86    0.11\n",
+       "24  2018-07-25        82    0.03\n",
+       "25  2018-07-26        81    0.07\n",
+       "26  2018-07-27        80    0.35\n",
+       "27  2018-07-28        77    0.01\n",
+       "28  2018-07-29        75    0.04\n",
+       "29  2018-07-30        77    0.00\n",
+       "30  2018-07-31        84    0.00"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boulder_july_2018"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "earth-data-science-textbook-VbL9wLaR-py3.10",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
