--- a/section_1/time_series.ipynb
+++ b/section_1/time_series.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,9 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading from https://ndownloader.figshare.com/files/16371473\n"
+     ]
+    }
+   ],
    "source": [
     "# Download the data\n",
     "data = et.data.get_data('colorado-flood')\n",
@@ -104,6 +112,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "precip_2005"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "precip_2005_daily = precip_2005_clean.resample(\"D\").sum()\n",
     "# Plot the data using native matplotlib\n",
     "f, ax = plt.subplots()\n",
@@ -114,8 +131,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "earth-data-science-textbook-VbL9wLaR-py3.10",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
